# 100_days_of_code_blog

./: .gitignore  Procfile  blog.db  forms.py  main.py  pyproject.toml
templates/: index.html  login.html  post.html  register.html
