[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
name = "root"
version = "0.0.0"
description="flask template"
[tool.poetry.dependencies]
flask = "1.1.2"
python = "^3.8"
certifi = "2020.6.20"
chardet = "3.0.4"
click = "7.1.2"
dominate = "2.5.2"
flask-bootstrap = "3.3.7.1"
flask-ckeditor = "0.4.4.1"
flask-gravatar = "0.5.0"
flask-login = "0.5.0"
flask-sqlalchemy = "2.4.4"
flask-wtf = "0.14.3"
gunicorn = "20.1.0"
idna = "2.10"
itsdangerous = "1.1.0"
jinja2 = "2.11.2"
markupsafe = "1.1.1"
requests = "2.24.0"
sqlalchemy = "1.3.19"
urllib3 = "1.25.10"
visitor = "0.1.3"
werkzeug = "1.0.1"
wtforms = "2.3.3"
